# esp32_project

./: .gitignore  .gitmodules
code/apps/: CMakeLists.txt  apps_event_group.h  apps_event_id.h  apps_init.c  apps_init.h  apps_os_ports.c  apps_os_ports.h
code/apps/app_idle/: app_home_screen_idle_activity.c  app_home_screen_idle_activity.h
code/apps/app_preproc/: app_preproc_activity.c  app_preproc_activity.h
code/middlewares/: CMakeLists.txt
code/middlewares/atci/: atci_ports.c
code/middlewares/ux/: ux_ports.c  ux_ports.h
code/middlewares/zlog/: zlog_config.h
code/peripherals/: CMakeLists.txt
code/peripherals/flash/: flash_w25qxx_config.h  flash_w25qxx_port.c
code/peripherals/oled/: oled_ssd1306_config.h  oled_ssd1306_port.c
project/demo/demo_bluedroid/: demo.h  demo_ble_advertise.c  demo_ble_ext_per_advertise.c  demo_ble_gatt_client.c  demo_ble_gatt_server.c  demo_ble_scan.c
project/esp32/: CMakeLists.txt  sdkconfig  sdkconfig.old
project/esp32/main/: CMakeLists.txt  main.c  main_config.h
project/esp32s3/: sdkconfig  sdkconfig.old
project/esp32s3/components/tinymaix/: CMakeLists.txt
project/esp32s3/doc/: 引脚映射.xlsx
project/esp32s3/main/: CMakeLists.txt  main.c  main_config.h
tools/: esp_env_esp32.lnk  esp_env_esp32s3.lnk
